--- a/client/src/stylesheets/alert.css
+++ b/client/src/stylesheets/alert.css
@@ -1,10 +1,13 @@
 /*DEFAULT STYLES*/
 .alert {
     position: absolute;
+    top:0;
 }
 
 .alert-danger {
     background: red;
+    padding: .5em;
+    border-radius: 0 0 .7em  0;
 }
 
 .alert-success {
