--- a/client/src/stylesheets/chat.css
+++ b/client/src/stylesheets/chat.css
@@ -5,16 +5,13 @@
     margin: 0.05em auto 0.05em auto;
     width: 85%;
     height: 100vh;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    background-color: green;
+    display: grid;
+    grid-template-columns: 1fr 3fr;
 }
 
 
 /* Левая часть чата */
 .chatWrapper .left {
-    flex-grow: 0;
     display: flex;
     flex-direction: column;
     border-right: 0.063em solid #4CA5FF;
@@ -25,14 +22,17 @@
 .chatWrapper .header {
     background-color: #FEFEFE;
     display: flex;
-    padding: 0.5em 1.25em;
     flex-direction: row;
     justify-content: flex-end;
+    height: 9.8vh;
 }
 /* Меню */
 .menu {
     position: relative;
-    display: inline-block;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-left: 1em;
 }
 .menuButton {
     display: flex;
@@ -50,6 +50,7 @@
 .dropdown-content {
     display: none;
     position: absolute;
+    top: 10vh;
     background-color: #fefefe;
     min-width: 190px;
     box-shadow: 3px 6px 12px 0px rgba(0, 0, 0, 0.08);
@@ -136,7 +137,7 @@
 
 /* Поиск */
 .chatWrapper .searchDiv {
-    padding-left: 1.56em;
+    margin: .5em 1em;
     display: flex;
 }
 .chatWrapper .searchDiv div {
@@ -153,7 +154,6 @@
 }
 .chatWrapper .searchDiv input[type=search] {
   width: 12em;
-  height: 2.5em;
   padding-left: 0.6em;
   border: none;
   border-radius: 0.7em 0 0 0.7em;
@@ -193,6 +193,10 @@
 }
 .chatWrapper .dialog:hover {
     cursor: pointer;
+    background: rgb(238, 238, 238);
+    transition: ease-in-out .3s;
+}
+.chatWrapper .active {
     background: rgb(238, 238, 238);
     transition: ease-in-out .3s;
 }
@@ -240,39 +244,29 @@
 
 /* Правая часть чата */
 .chatWrapper .right {
-    flex-grow: 1;
-    display: flex;
-    flex-direction: column;
+    height: 100%;
+    display: grid;
+    grid-template-rows: 10vh 75vh 15vh;
     background-color:#FEFEFE;
 }
 /* Голова правой части */
 .chatWrapper .status {
-    margin: 0 auto;
-    padding: 1.313em 1.25em;
     display: flex;
-    flex-direction: column;
-    width: auto;
+    justify-content: center;
+    align-items: center;
+    border-bottom: 0.063em solid #4CA5FF;
 }
-/* Основная часть чата */
-.chatWrapper .main {
-    border-top: 0.063em solid #4CA5FF;
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-    justify-content: flex-end;
-}
+
 /* Окно с сообщениями */
 .chatWrapper .messages {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
     padding: 1em;
+    overflow-y: auto;
 }
 /* Входящие сообщения */
 .chatWrapper .incomingLetterWrapper {
     display: flex;
     align-self: flex-start;
-    width: 80%;
+    width: 100%;
     margin: 1em 0 0;
     /* background-color: pink; */
 }
@@ -295,10 +289,8 @@
 .chatWrapper .outcomingLetterWrapper {
     display: flex;
     flex-direction: row-reverse;
-    align-self: flex-end;
     margin: 1em 0 0;
-    width: 80%;
-    /* background-color: pink; */
+    width: 100%;
 }
 .chatWrapper .outcomingLetterWrapper .inLetter {
     display: flex;
@@ -320,20 +312,19 @@
 /* Отправка сообщений */
 .chatWrapper .message {
     border-top: 0.063em solid #4CA5FF;
-    bottom: 0;
     display: flex;
     justify-content: center;
+    align-items: center;
     width: 100%;
 }
 .chatWrapper .messageForm {
-    padding: 0.8em;
     width: 90%;
     display: flex;
     justify-content: center;
 }
 .chatWrapper .messageForm input{
     width: 90%;
-    height: 2.5em;
+    height: 7vh;
     padding-left: 0.6em;
     border: 0.25em solid #4CA5FF;
     border-radius: 0.7em 0 0 0.7em;
