--- a/client/src/stylesheets/reset.css
+++ b/client/src/stylesheets/reset.css
@@ -36,7 +36,8 @@ footer, header, hgroup, menu, nav, section {
 }
 
 body {
-	line-height: 1;
+    line-height: 1;
+    box-sizing: border-box;
 }
 
 ol, ul {
