--- a/client/src/stylesheets/chat.css
+++ b/client/src/stylesheets/chat.css
@@ -6,7 +6,7 @@
     width: 85%;
     height: 100vh;
     display: grid;
-    grid-template-columns: 1fr 3fr;
+    grid-template-columns: 30vw 1fr;
 }
 
 
@@ -22,8 +22,8 @@
 .chatWrapper .header {
     background-color: #FEFEFE;
     display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
+    justify-content: center;
+    align-items: center;
     height: 9.8vh;
 }
 /* Меню */
@@ -139,6 +139,8 @@
 .chatWrapper .searchDiv {
     margin: .5em 1em;
     display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .chatWrapper .searchDiv div {
     height: 100%;
@@ -150,22 +152,24 @@
 .chatWrapper .searchDiv button {
     font-size: .8em;
     margin: .2em;
-    text-align: center;
+    height: 4em;
 }
 .chatWrapper .searchDiv input[type=search] {
-  width: 12em;
-  padding-left: 0.6em;
-  border: none;
-  border-radius: 0.7em 0 0 0.7em;
-  outline: none;
-  background: #F7F8F9;
-  color: #9E9C9C;
+    width: 100%;
+    height: 3.5em;
+    box-sizing: border-box;
+    padding-left: .6em;
+    border: none;
+    border-radius: 0.7em 0 0 0.7em;
+    outline: none;
+    background: #F7F8F9;
+    color: #9E9C9C;
 }
 .chatWrapper .searchDiv input[type=submit] {
     border: none;
     outline: none;
     border-radius: 0 0.7em 0.7em 0;
-    height: 100%;
+    height: 3.5em;
     background: rgb(235, 235, 235);
     transition: ease-in-out .2s;
     color: #757575;
