--- a/client/src/stylesheets/alert.css
+++ b/client/src/stylesheets/alert.css
@@ -11,7 +11,10 @@
 }
 
 .alert-success {
-    background: green;
+    background: rgba(0, 128, 0, 0.548);
+    padding: .5em;
+    right: 0;
+    border-radius: 0 0 0 .7em;
 }
 
 /*...*/
